unpackaged/main/default/objects/bt_stripe__Reattempt_Settings__c/bt_stripe__Reattempt_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage Transaction Reattempt settings</description>
    <label>Blackthorn Pay - Reattempt Settings</label>
</CustomObject>