unpackaged/main/default/objects/bt_stripe__Reattempt_Settings__c/fields/bt_stripe__Allow_on_Non_Auto_Capture__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Allow_on_Non_Auto_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, both Auto-Capture and non Auto-Capture Transactions will have a reattempt Transaction if failed.</description>
    <inlineHelpText>If checked, both Auto-Capture and non Auto-Capture Transactions will have a reattempt Transaction if failed.</inlineHelpText>
    <label>Allow on Non Auto Process</label>
    <type>Checkbox</type>
</CustomField>