unpackaged/main/default/objects/bt_stripe__Reattempt_Settings__c/fields/bt_stripe__Attempt_2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Attempt_2__c</fullName>
    <description>Number of days after the second reattempt will be tried.</description>
    <inlineHelpText>Number of days after the second reattempt will be tried.</inlineHelpText>
    <label>2nd Attempt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>