unpackaged/main/default/objects/bt_stripe__Reattempt_Settings__c/fields/bt_stripe__Enabled__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, failed transactions will generate reattempt transactions.</description>
    <inlineHelpText>If checked, failed transactions will generate reattempt transactions.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>